--- a/LoadGame.qrc
+++ b/LoadGame.qrc
@@ -1,6 +1,8 @@
 <RCC>
   <qresource prefix="/new/prefix1">
+    <file>images/matchday2.jpg</file>
+    <file>images/training ground.jpg</file>
     <file>images/9b50e19f-8d5d-444b-a51f-debda13bcf8e.png</file>
-    <file>images/vecteezy_football-field.jpg</file>
+    <file>images/vecteezy_football-field-or-soccer-field-background-vector-green_3543439.jpg</file>
   </qresource>
 </RCC>
