--- a/NewGame.qrc
+++ b/NewGame.qrc
@@ -3,5 +3,6 @@
     <file>images/empty-soccer-dressign-room-with-white-board-in-the-ba.jpg</file>
     <file>images/middleaged-soccer-manager-wearing-a-suit-is-looking-a.png</file>
     <file>images/soccer_field.png</file>
+    <file>images/vecteezy_football-field-or-soccer-field-background-vector-green_3543439.jpg</file>
   </qresource>
 </RCC>
